[package]
name = "morseus"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Une bibliothèque Rust pour encoder et décoder du texte en code Morse, jouer des signaux sonores et exporter en fichiers audio WAV."
repository = "https://github.com/elamani-drawing/morseus"
documentation = "https://docs.rs/morseus"
homepage = "https://github.com/elamani-drawing/morseus"
keywords = ["rust", "morse", "encoding", "decoding", "audio"]
categories = ["audio-processing", "cryptography", "morse"]

[dependencies]
rodio = "0.17.1"
hound = "3.5.0"
